# mpi-pi

./: .gitignore  CMakeLists.txt  Measure-Pi.ps1  README.md  config.hpp  main.cpp
include/: common.hpp  pi.hpp  random.hpp
src/: common.cpp  pi.cpp
